@startuml

title __INTERCEPTOR's Class Diagram__\n

  package  {
    package interceptor {
      interface BookingInterceptor {
          {abstract} + flightBooked()
          {abstract} + hotelBooked()
      }
    }
  }
  

  package  {
    package interceptor {
      class FlightBookingContext {
          - flightRoutes : ArrayList<String>
          - flightCosts : ArrayList<Double>
          - totalJourneyCost : Double
          - dates : ArrayList<Date>
          + FlightBookingContext()
          + getFlightRoutes()
          + getFlightCosts()
          + getTotalJourneyCost()
          + getDates()
          + setDates()
      }
    }
  }
  

  package  {
    package interceptor {
      class FullBookingContext {
          + FullBookingContext()
          + getFlightContext()
          + getHotelContext()
          + getTotalCostOfTrip()
          + getAllDetails()
      }
    }
  }
  

  package  {
    package interceptor {
      class HotelBookingContext {
          - hotels : ArrayList<String>
          - hotelCosts : ArrayList<Double>
          - totalHotelCost : Double
          - dates : ArrayList<Date>
          + HotelBookingContext()
          + getHotels()
          + getHotelCosts()
          + getTotalHotelCost()
          + getDates()
          + setDates()
      }
    }
  }
  

  package  {
    package interceptor {
      class LogToFileApp {
          + loggingRegister()
          + removeInterceptor()
      }
    }
  }
  

  package  {
    package interceptor {
      class LogToFileInterceptor {
          {static} - myInterceptor : LogToFileInterceptor
          - filePath : String
          - sdf : DateFormat
          - LogToFileInterceptor()
          + logIn()
          + logOut()
          + accountChange()
          + bookingMade()
          {static} + getInstanceOfInterceptor()
          + writeToFile()
      }
    }
  }
  

  package  {
    package interceptor {
      class LogToServerApp {
          + loggingRegister()
          + removeInterceptor()
      }
    }
  }
  

  package  {
    package interceptor {
      class LogToServerInterceptor {
          {static} - myInterceptor : LogToServerInterceptor
          - logMessageToServer()
          + logIn()
          + logOut()
          + accountChange()
          + bookingMade()
          {static} + getInstanceOfInterceptor()
      }
    }
  }
  

  package  {
    package interceptor {
      class LoggingContext {
          - userID : int
          - username : String
          - airlineID : int
          - flightID : int
          - bookingID : int
          - logMessage : String
          - extendedDataInJSON : String
          + LoggingContext()
          + LoggingContext()
          + LoggingContext()
          + getUserID()
          + getLogMessage()
          + getExtendedDataInJSON()
          + getUsername()
          + getAirlineID()
          + getFlightID()
          + setUserID()
          + setUsername()
          + setAirlineID()
          + setFlightID()
          + setLogMessage()
          + setExtendedDataInJSON()
      }
    }
  }
  

  package  {
    package interceptor {
      class LoggingDispatcher {
          ~ interceptors : ArrayList<LoggingInterceptor>
          {static} - myDispatcher : LoggingDispatcher
          - LoggingDispatcher()
          + logIn()
          + logOut()
          + accountChange()
          + bookingMade()
          + registerInterceptor()
          + removeInterceptor()
          {static} + getInstanceOfDispatcher()
      }
    }
  }
  

  package  {
    package interceptor {
      interface LoggingInterceptor {
          {abstract} + logIn()
          {abstract} + logOut()
          {abstract} + accountChange()
          {abstract} + bookingMade()
      }
    }
  }
  

  FullBookingContext o-- FlightBookingContext : flightContext
  FullBookingContext o-- HotelBookingContext : hotelContext
  LogToFileInterceptor -up-|> LoggingInterceptor
  LogToServerInterceptor -up-|> LoggingInterceptor
  LoggingDispatcher -up-|> LoggingInterceptor


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
